[gd_scene load_steps=4 format=3 uid="uid://cynystnt5cwlg"]

[ext_resource type="Script" path="res://PlayerController.gd" id="1_1rp1b"]
[ext_resource type="Texture2D" uid="uid://d2xwesqf3dwgn" path="res://analog_stick_back.png" id="2_c8ft0"]
[ext_resource type="Texture2D" uid="uid://dvwlyke01vja6" path="res://analog_stick.png" id="3_y2opl"]

[node name="PlayerController" type="Node"]
script = ExtResource("1_1rp1b")

[node name="controller_overlay" type="CanvasLayer" parent="."]

[node name="analog_stick_area" type="Control" parent="controller_overlay"]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -188.0
offset_top = -106.0
grow_horizontal = 0
grow_vertical = 0

[node name="analog_stick_back" type="TextureRect" parent="controller_overlay/analog_stick_area"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -26.0
offset_right = 27.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(26, 26)
texture = ExtResource("2_c8ft0")

[node name="analog_stick" type="TextureRect" parent="controller_overlay/analog_stick_area"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -17.0
offset_right = 19.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(18, 18)
texture = ExtResource("3_y2opl")
